tdf#162205 sw: Fix incorrect baseline adjust for vertical bidi portions

Bidi portion rendering was performing baseline adjustment twice. This
caused vertical left-to-right bidi portions to be rendered to the left
of their proper position.

Change-Id: Ic5258f58d8c8260194ec5ea0921d72f8dd738556
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171071
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>