vcl/qa/cppunit/pdfexport/pdfexport2.cxx
@@ -5388,6 +5388,118 @@ CPPUNIT_TEST_FIXTURE(PdfExportTest2, testTdf157390)
     }
 }
 
+// tdf#162205 - Verifies bidi portions on vertical left-to-right pages are rendered correctly
+CPPUNIT_TEST_FIXTURE(PdfExportTest2, testTdf162205Ltr)
+{
+    aMediaDescriptor[u"FilterName"_ustr] <<= u"writer_pdf_Export"_ustr;
+    saveAsPDF(u"tdf162205-ltr.fodt");
+
+    auto pPdfDocument = parsePDFExport();
+    CPPUNIT_ASSERT_EQUAL(1, pPdfDocument->getPageCount());
+
+    auto pPdfPage = pPdfDocument->openPage(/*nIndex*/ 0);
+    CPPUNIT_ASSERT(pPdfPage);
+    auto pTextPage = pPdfPage->getTextPage();
+    CPPUNIT_ASSERT(pTextPage);
+
+    int nPageObjectCount = pPdfPage->getObjectCount();
+    CPPUNIT_ASSERT_EQUAL(10, nPageObjectCount);
+
+    std::vector<OUString> aText;
+    std::vector<basegfx::B2DRectangle> aRect;
+
+    int nTextObjectCount = 0;
+    for (int i = 0; i < nPageObjectCount; ++i)
+    {
+        auto pPageObject = pPdfPage->getObject(i);
+        CPPUNIT_ASSERT_MESSAGE("no object", pPageObject != nullptr);
+        if (pPageObject->getType() == vcl::pdf::PDFPageObjectType::Text)
+        {
+            aText.push_back(pPageObject->getText(pTextPage));
+            aRect.push_back(pPageObject->getBounds());
+            ++nTextObjectCount;
+        }
+    }
+
+    CPPUNIT_ASSERT_EQUAL(10, nTextObjectCount);
+
+    CPPUNIT_ASSERT_EQUAL(u"T"_ustr, aText.at(0).trim());
+    CPPUNIT_ASSERT_EQUAL(u"h"_ustr, aText.at(1).trim());
+    CPPUNIT_ASSERT_EQUAL(u"e"_ustr, aText.at(2).trim());
+    CPPUNIT_ASSERT_EQUAL(u""_ustr, aText.at(3).trim());
+    CPPUNIT_ASSERT_EQUAL(u"\u0644"_ustr, aText.at(4).trim()); // lam
+    CPPUNIT_ASSERT_EQUAL(u"\u0627"_ustr, aText.at(5).trim()); // alef
+    CPPUNIT_ASSERT_EQUAL(u""_ustr, aText.at(6).trim());
+    CPPUNIT_ASSERT_EQUAL(u"T"_ustr, aText.at(7).trim());
+    CPPUNIT_ASSERT_EQUAL(u"h"_ustr, aText.at(8).trim());
+    CPPUNIT_ASSERT_EQUAL(u"e"_ustr, aText.at(9).trim());
+
+    // When the bug occurs, the Arabic portion is rendered far to the left of the English portions.
+    // Verify that Arabic characters are within range.
+    auto fnWithinRange = [](const auto& stExpected, const auto& stFound) {
+        CPPUNIT_ASSERT_LESS(20.0, std::abs(stExpected.getMinX() - stFound.getMinX()));
+    };
+
+    fnWithinRange(aRect.at(0), aRect.at(4));
+    fnWithinRange(aRect.at(7), aRect.at(5));
+}
+
+// tdf#162205 - Verifies bidi portions on vertical left-to-right pages are rendered correctly
+CPPUNIT_TEST_FIXTURE(PdfExportTest2, testTdf162205Rtl)
+{
+    aMediaDescriptor[u"FilterName"_ustr] <<= u"writer_pdf_Export"_ustr;
+    saveAsPDF(u"tdf162205-rtl.fodt");
+
+    auto pPdfDocument = parsePDFExport();
+    CPPUNIT_ASSERT_EQUAL(1, pPdfDocument->getPageCount());
+
+    auto pPdfPage = pPdfDocument->openPage(/*nIndex*/ 0);
+    CPPUNIT_ASSERT(pPdfPage);
+    auto pTextPage = pPdfPage->getTextPage();
+    CPPUNIT_ASSERT(pTextPage);
+
+    int nPageObjectCount = pPdfPage->getObjectCount();
+    CPPUNIT_ASSERT_EQUAL(10, nPageObjectCount);
+
+    std::vector<OUString> aText;
+    std::vector<basegfx::B2DRectangle> aRect;
+
+    int nTextObjectCount = 0;
+    for (int i = 0; i < nPageObjectCount; ++i)
+    {
+        auto pPageObject = pPdfPage->getObject(i);
+        CPPUNIT_ASSERT_MESSAGE("no object", pPageObject != nullptr);
+        if (pPageObject->getType() == vcl::pdf::PDFPageObjectType::Text)
+        {
+            aText.push_back(pPageObject->getText(pTextPage));
+            aRect.push_back(pPageObject->getBounds());
+            ++nTextObjectCount;
+        }
+    }
+
+    CPPUNIT_ASSERT_EQUAL(10, nTextObjectCount);
+
+    CPPUNIT_ASSERT_EQUAL(u"T"_ustr, aText.at(0).trim());
+    CPPUNIT_ASSERT_EQUAL(u"h"_ustr, aText.at(1).trim());
+    CPPUNIT_ASSERT_EQUAL(u"e"_ustr, aText.at(2).trim());
+    CPPUNIT_ASSERT_EQUAL(u""_ustr, aText.at(3).trim());
+    CPPUNIT_ASSERT_EQUAL(u"\u0644"_ustr, aText.at(4).trim()); // lam
+    CPPUNIT_ASSERT_EQUAL(u"\u0627"_ustr, aText.at(5).trim()); // alef
+    CPPUNIT_ASSERT_EQUAL(u""_ustr, aText.at(6).trim());
+    CPPUNIT_ASSERT_EQUAL(u"T"_ustr, aText.at(7).trim());
+    CPPUNIT_ASSERT_EQUAL(u"h"_ustr, aText.at(8).trim());
+    CPPUNIT_ASSERT_EQUAL(u"e"_ustr, aText.at(9).trim());
+
+    // When the bug occurs, the Arabic portion is rendered far to the left of the English portions.
+    // Verify that Arabic characters are within range.
+    auto fnWithinRange = [](const auto& stExpected, const auto& stFound) {
+        CPPUNIT_ASSERT_LESS(20.0, std::abs(stExpected.getMinX() - stFound.getMinX()));
+    };
+
+    fnWithinRange(aRect.at(0), aRect.at(4));
+    fnWithinRange(aRect.at(7), aRect.at(5));
+}
+
 } // end anonymous namespace
 
 CPPUNIT_PLUGIN_IMPLEMENT();
